# ChibaUnivClasses

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  scraper.yml
